--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Bontia, Vic Danielle L.</title>
-<link rel="icon" href="../Website/Images/am.jpg" type="image/jpg">
+<link rel="icon" href="Images/am.jpg" type="image/jpg">
 <style>
 * {
   box-sizing: border-box;
@@ -124,12 +124,12 @@ div p::first-line {
 
 <div class="header">
   <video width="1010px" height="auto" padding="0" autoplay muted loop>
-  <source src="../Website/Video,Audio/intro1.mp4" type="video/mp4">
-  <source src="../Website/Video,Audio/intro1.ogg" type="video/ogg">  
+  <source src="Video,Audio/intro1.mp4" type="video/mp4">
+  <source src="Video,Audio/intro1.ogg" type="video/ogg">  
   Your browser does not support the video tag.
 </video>
 <center>
-<audio id="myaudio" src="../Website/Video,Audio/bgm1.mp3" controls autoplay loop>
+<audio id="myaudio" src="Video,Audio/bgm1.mp3" controls autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 
@@ -145,9 +145,9 @@ div p::first-line {
 
 
 <div class="topnav">
-  <a href="../Website/index.html" class="active">Home</a>
-  <a href="../Website/Movies/index.html">Movies</a>
-  <a href="../Website/Music H1/index.html">Songs</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="Movies/index.html">Movies</a>
+  <a href="Music H1/index.html">Songs</a>
 </div>
 
 <div class="row" style="color:#293241;">
@@ -156,7 +156,7 @@ div p::first-line {
       <h2>FEELING MY OATS</h2>
       <h5>A myriad of selfies. September 15, 2021</h5>
       <div>
-      <img src="../Website/Images/h1.gif" style="height:auto; width:65%;">
+      <img src="Images/h1.gif" style="height:auto; width:65%;">
       <p>Lately, I have been apathetic with most things: being alone, getting old, life. But in the slightest fraction of a moment that I get to feel my oats, I flaunt them!
 True enough that I rarely get to feel this way–when I find time to take photos of myself. <b><u style="color:#3d5a80; cursor:pointer;">Read More...</u></b>
       </p>
@@ -166,7 +166,7 @@ True enough that I rarely get to feel this way–when I find time to take photos
       <h2>FIND SOLACE IN SOLITUDE</h2>
       <h5>An escape from the mundane. February 15, 2022</h5>
       <div>
-      <img src="../Website/Images/h22.jpg" style="height:auto; width:75%;">
+      <img src="Images/h22.jpg" style="height:auto; width:75%;">
       <p>It was last year since I decided to go on a run. I don't know, I just decided to be physically active. What I did not know was how much wonder and solace I found and <i>still</i> find when I go out for a run. Eventually a run conceded into a jog, a jog slowed its pace and became a mere walk, until a walk halts into a stop. A stop that I did not realize would bring me a moment of clarity. <b><u style="color:#3d5a80; cursor:pointer;">Read More...</u></b>
       </p>
       </div>
@@ -176,7 +176,7 @@ True enough that I rarely get to feel this way–when I find time to take photos
     <div class="card" style="width:100%; height:420px;">
       <h2>About Me</h2>
       <div>
-      <img src="../Website/Images/am.jpg" style="height:270px; width:auto;">
+      <img src="Images/am.jpg" style="height:270px; width:auto;">
       <center>
       <span><br>A <i>leo</i> sun and a <i>capricorn</i> moon.</span> </center>
       </div>
@@ -184,7 +184,7 @@ True enough that I rarely get to feel this way–when I find time to take photos
     <div class="card" style="width:100%; height:580px;">
       <h3>Latest Post</h3>
       <div>
-      <img src="../Website/Images/lp.jpg" style="width:auto; height:475px;">
+      <img src="Images/lp.jpg" style="width:auto; height:475px;">
       </div>
     </div>
     <div class="card" style="padding-top:10px;">
