--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@ div p::first-line {
 
 <div class="header">
   <video width="1010px" height="auto" padding="0" autoplay muted loop>
-  <source src="Video,Audio/intro1.mp4" type="video/mp4">
-  <source src="Video,Audio/intro1.ogg" type="video/ogg">  
+  <source src="Video_Audio/intro1.mp4" type="video/mp4">
+  <source src="Video_Audio/intro1.ogg" type="video/ogg">  
   Your browser does not support the video tag.
 </video>
 <center>
-<audio id="myaudio" src="Video,Audio/bgm1.mp3" controls autoplay loop>
+<audio id="myaudio" src="Video_Audio/bgm1.mp3" controls autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 
