--- a/Movies/index.html
+++ b/Movies/index.html
@@ -124,12 +124,12 @@ div p::first-line {
 
 <div class="header">
   <video width="1010px" height="auto" padding="0" autoplay muted loop>
-  <source src="../Video,Audio/intro1.mp4" type="video/mp4">
-  <source src="../Video,Audio/intro1.ogg" type="video/ogg">  
+  <source src="../Video_Audio/intro1.mp4" type="video/mp4">
+  <source src="../Video_Audio/intro1.ogg" type="video/ogg">  
   Your browser does not support the video tag.
 </video>
 <center>
-<audio id="myaudio" src="../Video,Audio/bgm1.mp3" controls autoplay loop>
+<audio id="myaudio" src="../Video_Audio/bgm1.mp3" controls autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 
@@ -157,8 +157,8 @@ div p::first-line {
       <h5>2004 ‧ Fantasy/Adventure ‧ 1h 59m</h5>
       <div>
       <video width="auto" height="500px" controls>
-      <source src="../Video,Audio/hmc.mp4" type="video/mp4">
-      <source src="../Video,Audio/hmc.ogg" type="video/ogg">  
+      <source src="../Video_Audio/hmc.mp4" type="video/mp4">
+      <source src="../Video_Audio/hmc.ogg" type="video/ogg">  
       Your browser does not support the video tag.
       </video>
       </div>
@@ -169,8 +169,8 @@ div p::first-line {
       <h5>2016 ‧ Musical/Romance ‧ 2h 8m</h5>
       <div>
       <video width="auto" height="500px" controls>
-      <source src="../Video,Audio/lll.mp4" type="video/mp4">
-      <source src="../Video,Audio/lll.ogg" type="video/ogg">  
+      <source src="../Video_Audio/lll.mp4" type="video/mp4">
+      <source src="../Video_Audio/lll.ogg" type="video/ogg">  
       Your browser does not support the video tag.
       </video>
       </div>
@@ -181,8 +181,8 @@ div p::first-line {
       <h5>2018 ‧ Musical/Drama ‧ 2h 14m</h5>
       <div>
       <video width="auto" height="500px" controls>
-      <source src="../Video,Audio/br.mp4" type="video/mp4">
-      <source src="../Video,Audio/br.ogg" type="video/ogg">  
+      <source src="../Video_Audio/br.mp4" type="video/mp4">
+      <source src="../Video_Audio/br.ogg" type="video/ogg">  
       Your browser does not support the video tag.
       </video>
       </div>
