--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ div p::first-line {
 
 <div class="header">
   <video width="1010px" height="auto" padding="0" autoplay muted loop>
-  <source src="Video_Audio/intro1.mp4" type="video/mp4">
-  <source src="Video_Audio/intro1.ogg" type="video/ogg">  
+  <source src="Video,Audio/intro1.mp4" type="video/mp4">
+  <source src="Video,Audio/intro1.ogg" type="video/ogg">  
   Your browser does not support the video tag.
 </video>
 <center>
