--- a/Music L5/index.html
+++ b/Music L5/index.html
@@ -28,8 +28,8 @@ body {
 
 <div style="width:250px; margin:auto; position:relative; top:480px;">
   <audio controls loop autoplay style="width:100%;" >
-  <source src="../Video_Audio/Halleys Comet.ogg" type="audio/ogg">
-  <source src="../Video_Audio/Halleys Comet.mp3" type="audio/mpeg">
+  <source src="../Video,Audio/Halleys Comet.ogg" type="audio/ogg">
+  <source src="../Video,Audio/Halleys Comet.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </div>
