--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ div p::first-line {
   Your browser does not support the video tag.
 </video>
 <center>
-<audio id="myaudio" src="Video_Audio/bgm1.mp3" controls autoplay loop>
+<audio id="myaudio" src="Video,Audio/bgm1.mp3" controls autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 
